mudança na fonte

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <title>::: HOME :::</title>
 </head>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 <body>
     <div id="perfil">
