dei uma mexida no paragrafo, imagem, titulos e fontes

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <head>
     <title>::: HOME :::</title>
 </head>
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 <body>
     <div id="perfil">
@@ -13,10 +15,10 @@
         <div id='imagens' class=''>
             <img id="foto1" alt="caralindo" src="img/Elias.jpg">
         </div>
-        <div id='texto' class=''>
-            <p>Meu nome é Elias e moro no Brasil, nasci na Bahia em 2002...</p>
+        <div id='texto' class='texto'>
+            <p>    Meu nome é Elias, moro no Brasil, <br> nasci na Bahia em 2002...</p>
         </div>
-        <div id="lista" class=''>
+        <div id="lista" class='lista'>
             <ul>
                 <li>Inteligente</li>
                 <li>Legal</li>
