mudanças de cores

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="perfil">
         <div id='título' class=''>
-            <h1>Elias V. Alcântara</h1>
+            <h1>Elias Vasques de Alcântara</h1>
         </div>
         <div id='imagens' class=''>
             <img id="foto1" alt="caralindo" src="img/Elias.jpg">
@@ -18,7 +18,7 @@
         <div id='texto' class='texto'>
             <p>    Meu nome é Elias, moro no Brasil, <br> nasci na Bahia em 2002...</p>
         </div>
-        <div id="lista" class='lista'>
+        <div id="lista" class='texto'>
             <ul>
                 <li>Inteligente</li>
                 <li>Legal</li>
