--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 </head>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 <body>
     <div id="perfil">
@@ -13,17 +11,60 @@
             <h1>Elias Vasques de Alcântara</h1>
         </div>
         <div id='imagens' class=''>
+            ____
             <img id="foto1" alt="caralindo" src="img/Elias.jpg">
+            ________
+            <img id="foto2" alt="queforte" src="img/eupequeno.jpg">
+            ____
         </div>
         <div id='texto' class='texto'>
-            <p>    Meu nome é Elias, moro no Brasil, <br> nasci na Bahia em 2002...</p>
-        </div>
+            <p>  
+                 Meu nome é Elias, moro no Brasil, nasci na Bahia em 2002. Atualmente faço
+                 curso de desenvolivmento de sistemas no Senai, sendo esse meu primeiro 
+                 site.
+            </p>
+            <p>
+                Dê um 
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSetSxpay2ProKenzsO5lmhCS4unx6CcpRBD-jKoojdVgvUDyw/viewform" target="_blank">feedback</a>
+                .
+                <br>
+                <br>
+            </p>
         <div id="lista" class='texto'>
             <ul>
-                <li>Inteligente</li>
-                <li>Legal</li>
-                <li>Só isso.</li>
+                Qualidades:
+                <li>
+                   Esforçado
+                </li>
+                <li>
+                    Aprende rápido
+                </li>
+                <li>
+                    Pontual
+                </li>
             </ul>
+            <ul>
+                <p>
+                    Defeitos:
+                    <br>
+                    (lista vazia) 
+                </p>
+            </ul>
+        </div>
+        <div>
+            <p>
+
+            </p>
+        </div>
+        <div id="algunslinks">
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="https://github.com/EliasVasques" target="_blank">github</a>
+            <a href="https://www.linkedin.com/in/elias-vasques-29265120a/" target="_blank">linkedin</a>
+            <a href="https://www.instagram.com/eliasvasquesalcantara/" target="_blank">instagram</a>
+            WhatsAap:7593300-8499
         </div>
     </div>
 </body>
