--- a/contatos.html
+++ b/contatos.html
@@ -11,7 +11,7 @@
             WhatsAap:7593300-8499
         </div>
         <div id="botoes">
-            <button type="button" onclick="https://github.com/EliasVasques" >github</button>
+            <button type="button">github</button>
         </div>
     </body>
 
