deixei mais bonito

--- a/contatos.html
+++ b/contatos.html
@@ -2,16 +2,21 @@
     <head>
         <title>::: CONTATOS :::</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" /> 
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id="links" class="link">
-            <a id="link1" href="https://github.com/EliasVasques" target="_blank">github</a>
-            <a href="https://www.linkedin.com/in/elias-vasques-29265120a/" target="_blank">linkedin</a>
-            <a href="https://www.instagram.com/eliasvasquesalcantara/" target="_blank">instagram</a>
-            WhatsAap:7593300-8499
+        <div id="titulo">
+            <h1>Contatos</h1>
         </div>
-        <div id="botoes">
-            <button type="button">github</button>
+        <div id="links">
+            <a href="https://github.com/EliasVasques" target="_blank">github</a>
+            <br>
+            <a href="https://www.linkedin.com/in/elias-vasques-29265120a/" target="_blank">linkedin</a>
+            <br>
+            <a href="https://www.instagram.com/eliasvasquesalcantara/" target="_blank">instagram</a>
+            <br>
+            WhatsAap:7593300-8499
         </div>
     </body>
 
