--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
             <div id='título' class=''>
                 <h1>Elias Vasques de Alcântara</h1>
             </div>
-            <div id='imagens' class=''>
-                ____
-                <img id="foto1" alt="caralindo" src="img/Elias.jpg">
-                ________
+            <div id='imagens'>
                 <img id="foto2" alt="queforte" src="img/eupequeno.jpg">
-                ____
             </div>
             <div id='texto' class='texto'>
                 <p>  
@@ -44,11 +40,9 @@
                     </li>
                 </ul>
                 <ul>
-                    <p>
-                        Defeitos:
-                        <br>
-                        (lista vazia) 
-                    </p>
+                    Defeitos:
+                    <br>
+                    (lista vazia) 
                 </ul>
             </div>
             <div>
