--- a/home.html
+++ b/home.html
@@ -2,17 +2,20 @@
     <head>
         <title>::: HOME :::</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div>
-            <h1>Meu site</h1>
-        </div>
-        <div id="imagens">
-            <img id="foto3" alt="Elias" src="img/elias2.jpg">
-        </div>
         <div id="links" class="link">
             <a href="index.html" target="_blank">sobre mim</a>
             <a href="contatos.html" target="_blank">contatos</a>
+        </div>
+        <div>
+            <h1>Elias</h1>
+        </div>
+        <div id="imagens">
+            <img id="foto3" alt="Elias" src="img/elias2.jpg">
         </div>
     </body>
 </html>
