--- a/index.html
+++ b/index.html
@@ -1,55 +1,36 @@
 <html>
     <head>
-        <title>::: SOBRE MIM :::</title>
-    </head>
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+        <title>CONTATOS</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+    </head>
     <body>
-        <div id="perfil">
-            <div id='título' class=''>
-                <h1>Elias Vasques de Alcântara</h1>
-            </div>
-            <div id='imagens'>
-                <img id="foto2" alt="queforte" src="img/eupequeno.jpg">
-            </div>
-            <div id='texto' class='texto'>
-                <p>  
-                    Meu nome é Elias, moro no Brasil, nasci na Bahia em 2002. Atualmente faço
-                    curso de desenvolivmento de sistemas no Senai, sendo esse meu primeiro 
-                    site.
-                </p>
-                <p>
-                    Dê um 
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSetSxpay2ProKenzsO5lmhCS4unx6CcpRBD-jKoojdVgvUDyw/viewform" target="_blank">feedback</a>
-                    .
-                    <br>
-                    <br>
-                </p>
-            <div id="lista" class='texto'>
-                <ul>
-                    Qualidades:
-                    <li>
-                    Esforçado
-                    </li>
-                    <li>
-                        Aprende rápido
-                    </li>
-                    <li>
-                        Pontual
-                    </li>
-                </ul>
-                <ul>
-                    Defeitos:
-                    <br>
-                    (lista vazia) 
-                </ul>
-            </div>
-            <div>
-                <p>
+        <nav>
+            <ul>
+                <li>
+                    <a href="sobre-mim.html">Sobre mim</a>
+                </li>
+                <li>
+                    <a href="contatos.html">Contatos</a>
+                </li>
+            </ul>
+        </nav>
+        
+        <header>
+            <h1>Elias</h1>
+        </header>
 
-                </p>
-            </div>
-        </div>
+        <section>
+            <img id="foto" alt="Elias" src="img/elias2.jpg">
+        </section>
+
+        <section class="tecnologias">
+            <h2>Tecnologias</h2>
+            <ul>
+                <li><img src="img/python.jfif" alt=""></li>
+                <li><img src="img/js.png" alt=""></li>
+                <li><img src="img/html.png" alt=""></li>
+                <li><img src="img/css.png" alt=""></li>
+            </ul>         
+        </section>
     </body>
 </html>
