--- a/contatos.html
+++ b/contatos.html
@@ -1,23 +1,41 @@
 <html>
     <head>
-        <title>::: CONTATOS :::</title>
+        <title>CONTATOS</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" /> 
-        <link rel="preconnect" href="https://fonts.gstatic.com"> 
-        <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id="titulo">
-            <h1>Contatos</h1>
-        </div>
-        <div id="links">
-            <a href="https://github.com/EliasVasques" target="_blank">github</a>
-            <br>
-            <a href="https://www.linkedin.com/in/elias-vasques-29265120a/" target="_blank">linkedin</a>
-            <br>
-            <a href="https://www.instagram.com/eliasvasquesalcantara/" target="_blank">instagram</a>
-            <br>
-            WhatsAap:7593300-8499
-        </div>
-    </body>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="sobre-mim.html">Sobre mim</a>
+                </li>
+            </ul>
+        </nav>
 
+        <header>
+            <h1>Contatos</h1>
+        </header>
+
+        <section class="contatos">
+            <ul>
+                <li>
+                    <a href="https://github.com/EliasVasques" target="_blank">
+                        Github</a>
+                    </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/elias-vasques-29265120a/" target="_blank">
+                        Linkedin
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/eliasvasquesalcantara/" target="_blank">
+                        Instagram
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </body>
 </html>
