juntei tudo em uma página só

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <html>
     <head>
-        <title>CONTATOS</title>
+        <title>Elias</title>
         <link href="css/style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <nav>
             <ul>
                 <li>
-                    <a href="sobre-mim.html">Sobre mim</a>
+                    <a href="#sobre-mim">Sobre mim</a>
                 </li>
                 <li>
-                    <a href="contatos.html">Contatos</a>
+                    <a href="#contatos">Contatos</a>
                 </li>
             </ul>
         </nav>
@@ -19,11 +19,13 @@
             <h1>Elias</h1>
         </header>
 
+        <div class="subir página"></div>
+
         <section>
             <img id="foto" alt="Elias" src="img/elias2.jpg">
         </section>
 
-        <section class="tecnologias">
+        <section id="tecnologias">
             <h2>Tecnologias</h2>
             <ul>
                 <li><img src="img/python.jfif" alt=""></li>
@@ -32,5 +34,42 @@
                 <li><img src="img/css.png" alt=""></li>
             </ul>         
         </section>
+
+        <section id="sobre-mim">
+            <img src="img/Elias.jpg" alt="">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime ab quae cupiditate quisquam nobis eos eius earum, debitis nesciunt vel mollitia! Similique ut perferendis a at ipsum neque delectus officia!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit ad harum quisquam ipsa libero, tenetur cum illum neque ducimus consequuntur repellendus culpa facilis, dolores maxime expedita distinctio alias atque quasi?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium repellat, natus accusantium non perspiciatis illum hic libero similique odio consequatur dolorum ullam rem commodi assumenda ipsa, nostrum eius? Praesentium, vero!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolor atque aspernatur. Nostrum nesciunt aspernatur consequatur reprehenderit neque dolore incidunt cupiditate, atque quis quos rem, alias saepe iste ullam esse!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque libero, dicta hic voluptas minima magni similique ea sint odio reiciendis delectus amet ullam laborum doloribus ducimus neque deleniti unde beatae!
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo sint, est aut eius neque perspiciatis saepe modi velit recusandae enim culpa doloribus. Repellat id quo ducimus quos, saepe dolores facere.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus doloribus numquam rem dolore animi suscipit alias vel laudantium. Error quisquam alias dolorem asperiores, fugiat expedita nesciunt neque debitis! Fuga, ducimus.lorem
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil dolore, cumque veritatis deserunt eum modi libero impedit amet architecto dignissimos numquam vel cupiditate fuga non molestias voluptates quam illum ipsa?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, eos. Ipsum doloribus ab voluptatum culpa quasi voluptatibus! Totam asperiores, sequi suscipit nobis inventore dolor velit quis explicabo assumenda veniam sint!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, ipsam soluta modi architecto commodi est repellat, sint ullam quasi molestiae ab recusandae cum distinctio aspernatur rem incidunt perferendis in odit.
+        </section>
+
+        <section id="contatos">
+            <ul>
+                <li>
+                    <a href="https://github.com/EliasVasques" target="_blank">
+                        Github</a>
+                    </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/elias-vasques-29265120a/" target="_blank">
+                        Linkedin
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/eliasvasquesalcantara/" target="_blank">
+                        Instagram
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+        <footer>
+            <p>Criado por Elias Vasques - 31/12/2021</p>
+        </footer>
     </body>
 </html>
